<resources>
    <string name="app_name">GO SOPT Android</string>
    <string name="welcome_to_go_android">Welcome to GO Android!</string>
    <string name="id">ID</string>
    <string name="plz_id">아이디를 입력하세요.</string>
    <string name="plz_sign_up_id">6~10글자의 아이디를 입력하세요.</string>
    <string name="pw">PW</string>
    <string name="plz_pw">비밀번호를 입력하세요.</string>
    <string name="plz_sign_up_pw">8~12글자의 비밀번호를 입력하세요.</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_complete">회원가입 완료</string>
    <string name="name">NAME</string>
    <string name="feature">FEATURE</string>
    <string name="plz_name">이름을 입력하세요.</string>
    <string name="plz_feature">특기를 입력하세요.</string>
    <string name="profile_name_format">이름 : %s</string>
    <string name="profile_feature_format">특기 : %s</string>
    <string name="sign_up_incorrect">조건에 맞게 회원가입을 진행해주세요.</string>
    <string name="sign_up_done">회원가입이 완료되었습니다.</string>
    <string name="sign_in_done">로그인에 성공했습니다.</string>
    <string name="sign_in_fail">로그인에 실패했습니다.</string>
    <string name="login_incorrect">아이디 또는 비밀번호가 틀렸습니다.</string>
    <string name="rv_title">연청의 레포지토리</string>
    <string name="sign_up_success">회원가입 성공</string>
    <string name="server_connection_fail">서버 통신 실패</string>
</resources>