<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.SignUpActivity">

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_signup" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/plz_sign_up_id"
        android:inputType="text"
        android:maxLength="10"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_id" />

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pw"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_id" />

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/plz_sign_up_pw"
        android:inputType="textPassword"
        android:maxLength="12"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_pw" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_pw" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/plz_name"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_feature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feature"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <EditText
        android:id="@+id/et_feature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/plz_feature"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_feature" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_complete"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_feature" />

</androidx.constraintlayout.widget.ConstraintLayout>