<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.LoginActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_go_android"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/plz_id"
        android:inputType="text"
        android:maxLength="10"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_id" />

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pw"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_id" />

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/plz_pw"
        android:inputType="textPassword"
        android:maxLength="12"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_pw" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_pw" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>